--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,9 @@
 Package: Anova
-Title: An Amazing Shiny App
+Title: Anova tests
 Version: 0.0.0.9000
-Authors@R: 
-    person(given = "firstname",
-           family = "lastname",
-           role = c("aut", "cre"),
-           email = "your@email.com")
-Description: What the package does (one paragraph).
-License: What license is it under?
+Authors@R: person('Renato', 'Afonso', email = 'renato-afonso@usp.br', role = c('cre', 'aut'))
+Description: Anova for experimental studies
+License: MIT + file LICENSE
 Imports: 
     config (>= 0.3.1),
     golem (>= 0.3.2),
@@ -15,3 +11,8 @@ Imports:
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+Language: en-US
