--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,8 +5,11 @@ Authors@R: person('Renato', 'Afonso', email = 'renato-afonso@usp.br', role = c('
 Description: Anova for experimental studies
 License: MIT + file LICENSE
 Imports: 
+    attempt,
     config (>= 0.3.1),
+    glue,
     golem (>= 0.3.2),
+    htmltools,
     shiny (>= 1.7.1)
 Encoding: UTF-8
 LazyData: true
